🐛 fix logo on small screens & remove home from top nav

--- a/themes/codechilli-slcfhr/assets/scss/_common.scss
+++ b/themes/codechilli-slcfhr/assets/scss/_common.scss
@@ -416,6 +416,7 @@ textarea.form-control {
 }
 
 .logo {
+  padding: 12px;
   width: 80%;
   max-height: fit-content;
 }
