--- a/themes/codechilli-slcfhr/assets/scss/templates/_navigation.scss
+++ b/themes/codechilli-slcfhr/assets/scss/templates/_navigation.scss
@@ -1,6 +1,6 @@
 .top-header {
   font-size: 12px;
-  transition: transform .2s ease;
+  transition: transform 0.2s ease;
   transform-origin: top;
   font-weight: 600;
 
@@ -13,18 +13,19 @@
 .navigation {
   // background: linear-gradient(to right, transparent 0%, $primary-color 50%);
   background-color: $primary-color;
-  transition: .2s ease;
+  transition: 0.2s ease;
 
   @include desktop {
     background: $primary-color;
 
     .navbar-brand {
       padding: 12px 0;
+      display: contents;
     }
   }
 }
 
-.navbar-collapse{
+.navbar-collapse {
   @include desktop {
     background: $primary-color;
   }
@@ -63,7 +64,7 @@
     background: $white;
     transform: scaleY(0);
     transform-origin: top;
-    transition: transform .3s ease;
+    transition: transform 0.3s ease;
   }
 
   &:hover,
@@ -84,10 +85,10 @@ link:focus,
   color: $white;
 }
 
-.navbar-dark .navbar-nav .active>.nav-link,
+.navbar-dark .navbar-nav .active > .nav-link,
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.show,
-.navbar-dark .navbar-nav .show>.nav-link {
+.navbar-dark .navbar-nav .show > .nav-link {
   color: $white;
 }
 
@@ -114,7 +115,7 @@ link:focus,
       .dropdown-menu {
         visibility: visible;
         opacity: 1;
-        transform: translateY(0)
+        transform: translateY(0);
       }
     }
 
@@ -126,7 +127,7 @@ link:focus,
       border-radius: 0;
       display: block;
       visibility: hidden;
-      transition: .3s ease;
+      transition: 0.3s ease;
       opacity: 0;
       transform: translateY(20px);
       background: $white;
@@ -152,7 +153,7 @@ link:focus,
     &-item {
       position: relative;
       color: $text-color-dark;
-      transition: .2s ease;
+      transition: 0.2s ease;
       text-transform: capitalize;
       font-family: $primary-font;
 
